[package]
name = "blockstack-core"
version = "0.0.1"
authors = ["Jude Nelson <jude@blockstack.com>", "Aaron Blankstein <aaron@blockstack.com>"]
license = "GPLv3"
homepage = "https://github.com/blockstack/blockstack-core"
repository = "https://github.com/blockstack/blockstack-core"
description = "Reference implementation of Blockstack Core"
keywords = [ "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"


[lib]
name = "clarity"
test = false
path = "src/clarity_wasm.rs"
crate-type = ["cdylib", "rlib"]
required-features = ["wee_alloc", "console_error_panic_hook", "wasm-bindgen", "stdweb"]


[features]
developer-mode = []
default = ["developer-mode"]


[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
rand_core = "0.5.0"
stdweb = "0.4.17"

byteorder = "1.1"
rust-ini = "0.13"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
sha2 = "0.8.0"
sha3 = "0.8.2"
ripemd160 = "0.8.0"
dirs = { version = "2.0.1", optional = true }
regex = "1"
mio = { version = "0.6.16", optional = true }

[dependencies.rand]
version = "0.6.5"
features = ["stdweb"]

[dependencies.secp256k1]
version = "0.11.5"
features = ["serde"]

[dependencies.rusqlite]
version = "=0.16.0"
features = ["i128_blob", "bundled"]

[dependencies.ed25519-dalek]
version = "=1.0.0-pre.1"
features = ["serde"]

[dependencies.curve25519-dalek]
version = "=1.0.3"
features = ["serde"]

